# cloudcomputemanager

./: .gitignore  AGENTS.md  AGENT_PROMPT.md  CCM_DEVELOPMENT_PROMPT.md  CLAUDE.md  DESIGN.md  README.md  pyproject.toml
.claude/skills/ccm/: SKILL.md
docs/: DASHBOARD_PLAN.md  ENVIRONMENT_DESIGN.md  INSTANCE_INTEGRITY_PLAN.md  NAMD_CHECKPOINT_RESTART_DESIGN.md  RECOVERY_REDESIGN.md  SPOT_INSTANCE_SURVIVAL_GUIDE.md  SPRINT_2026-03-23.md  usage.md
docs/archive/: CCM_IMPROVEMENT_PLAN_2026-02-26.md  IMPLEMENTATION_PLAN.md  PACKSTORE_DESIGN.md
examples/: lammps-job.yaml  pytorch-training.yaml  test-gpu-query-fix.yaml  test-quick-job.yaml
src/cloudcomputemanager/: __init__.py
src/cloudcomputemanager/agents/: __init__.py  sdk.py
src/cloudcomputemanager/api/: __init__.py  app.py  routes.py
src/cloudcomputemanager/benchmarks/: __init__.py  engine.py  models.py
src/cloudcomputemanager/checkpoint/: __init__.py  detectors.py  namd_restart.py  orchestrator.py  restart_adapters.py
src/cloudcomputemanager/cli/: __init__.py  batch.py  benchmarks.py  environments.py  instances.py  jobs.py  jobs_exec.py  main.py  metrics.py  packstore.py  sync.py
src/cloudcomputemanager/core/: __init__.py  cleanup.py  config.py  database.py  environment.py  instances.py  models.py  recovery.py  templates.py  validation.py  wrapper.py
src/cloudcomputemanager/daemon/: __init__.py  monitor.py  service.py
src/cloudcomputemanager/dashboard/: __init__.py  data.py  routes.py
src/cloudcomputemanager/packstore/: __init__.py  deployer.py  detector.py  registry.py
src/cloudcomputemanager/providers/: __init__.py  base.py  vast.py
tests/: __init__.py  conftest.py  test_agent_sdk.py  test_api_routes.py  test_batch.py  test_checkpoint.py  test_cleanup.py  test_cli.py  test_config.py  test_dashboard.py  test_database.py  test_e2e_full_lifecycle.py  test_environments.py  test_integration_vast.py  test_metrics.py  test_models.py  test_monitor.py  test_packstore.py  test_provider_errors.py  test_providers.py  test_recovery.py  test_restart_adapters.py  test_sprint_features.py  test_templates.py  test_validation.py
tests/integration_restart/: test_e2e_preemption.yaml  test_gromacs.yaml  test_lammps.yaml  test_pytorch.yaml  validate_adapters.py
(+21 files in other folders)
