[project]
name = "cloudcomputemanager"
version = "0.1.0"
description = "Cloud compute management platform with automatic checkpointing, continuous sync, and agent-native APIs"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "sf2", email = "sf2@example.com"},
]
keywords = ["cloud", "gpu", "cpu", "vast.ai", "checkpointing", "spot-instances", "hpc", "lammps", "scientific-computing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    # Cloud orchestration
    "skypilot[vast]>=0.11.0",

    # Async HTTP client
    "httpx>=0.27.0",

    # Data validation and serialization
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Database ORM
    "sqlmodel>=0.0.16",
    "aiosqlite>=0.19.0",

    # CLI framework
    "typer>=0.9.0",
    "rich>=13.0.0",

    # API framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",

    # Utilities
    "structlog>=24.1.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
    "watchfiles>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "respx>=0.20.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[project.scripts]
ccm = "cloudcomputemanager.cli.main:app"
cloudcomputemanager = "cloudcomputemanager.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cloudcomputemanager"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["cloudcomputemanager"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
